saját yml fájl / login teszt

--- a/.github/workflows/login_post.yml
+++ b/.github/workflows/login_post.yml
@@ -39,4 +39,4 @@ jobs:
 
       - name: Run Tests
         run: |
-            selenium-side-runner seleniumide-tests/login.side
+            selenium-side-runner seleniumide-tests/registration.side
