--- a/.github/workflows/kutat.yml
+++ b/.github/workflows/kutat.yml
@@ -30,6 +30,9 @@ jobs:
       run: |
         sudo apt-get install google-chrome-stable
 
+    - name: Install seleniumbase
+      run: pip install seleniumbase
+
     - name: Install chromedriver
       run: |
         seleniumbase install chromedriver
