--- a/.github/workflows/login_post.yml
+++ b/.github/workflows/login_post.yml
@@ -32,7 +32,7 @@ jobs:
 
       - name: Install Chrome
         run: |
-          sudo apt-get install google-chrome-stable
+          sudo apt install google-chrome-stable
 
       - name: Install seleniumbase
         run: pip install seleniumbase
