--- a/.github/workflows/kutat.yml
+++ b/.github/workflows/kutat.yml
@@ -15,7 +15,12 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - uses: actions/checkout@v2
+    - name: Check out repository code
+      uses: actions/checkout@v2
+    - name: Install jq tool
+      run: |
+          sudo apt-get update
+          sudo apt-get install jq
     - name: Set up Python 3.9
       uses: actions/setup-python@v2
       with:
