--- a/.github/workflows/kutat.yml
+++ b/.github/workflows/kutat.yml
@@ -15,8 +15,16 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - name: Check out repository code
-      uses: actions/checkout@v2
+    - uses: actions/checkout@v2
+    - uses: nanasess/setup-chromedriver@master
+      with:
+        # Optional: do not specify to match Chrome's version
+        chromedriver-version: '88.0.4324.96'
+    - run: |
+        export DISPLAY=:99
+        chromedriver --url-base=/wd/hub &
+        sudo Xvfb -ac :99 -screen 0 1280x1024x24 > /dev/null 2>&1 & # optional
+
     - name: Install jq tool
       run: |
           sudo apt-get update
@@ -37,10 +45,6 @@ jobs:
 
     - name: Install seleniumbase
       run: pip install seleniumbase
-
-    - name: Install chromedriver
-      run: |
-        seleniumbase install chromedriver
 
     - name: Test with pytest
       run: |
