--- a/.github/workflows/login_post.yml
+++ b/.github/workflows/login_post.yml
@@ -16,6 +16,14 @@ jobs:
 
     steps:
       - uses: actions/checkout@v2
+      - uses: nanasess/setup-chromedriver@master
+        with:
+          # Optional: do not specify to match Chrome's version
+          chromedriver-version: '88.0.4324.96'
+      - run: |
+          export DISPLAY=:99
+          chromedriver --url-base=/wd/hub &
+          sudo Xvfb -ac :99 -screen 0 1280x1024x24 > /dev/null 2>&1 & # optional
 
       - name: Builds and Starts
         run: |
@@ -37,9 +45,9 @@ jobs:
       - name: Install seleniumbase
         run: pip install seleniumbase
 
-      - name: Install chromedriver
-        run: |
-            seleniumbase install chromedriver
+    #  - name: Install chromedriver
+    #    run: |
+    #        seleniumbase install chromedriver
 
       - name: Run Tests
         run: |
