--- a/.github/workflows/login_post.yml
+++ b/.github/workflows/login_post.yml
@@ -16,18 +16,10 @@ jobs:
 
     steps:
       - uses: actions/checkout@v2
-      - uses: nanasess/setup-chromedriver@master
-        with:
-          # Optional: do not specify to match Chrome's version
-          chromedriver-version: '88.0.4324.96'
-      - run: |
-          export DISPLAY=:99
-          chromedriver --url-base=/wd/hub &
-          sudo Xvfb -ac :99 -screen 0 1280x1024x24 > /dev/null 2>&1 & # optional
 
       - name: Builds and Starts
         run: |
-            docker-compose up -d
+          docker-compose up -d
 
       - name: install Nodejs
         uses: actions/setup-node@v2
@@ -42,13 +34,13 @@ jobs:
         run: |
           sudo apt install google-chrome-stable
 
-    #  - name: Install seleniumbase
-    #    run: pip install seleniumbase
+      - name: Install seleniumbase
+        run: pip install seleniumbase
 
-    #  - name: Install chromedriver
-    #    run: |
-    #        seleniumbase install chromedriver
+      - name: Install chromedriver
+        run: |
+          seleniumbase install chromedriver
 
       - name: Run Tests
         run: |
-            selenium-side-runner seleniumide-tests/registration.side
+          selenium-side-runner seleniumide-tests/registration.side
