--- a/.github/workflows/webdriv_test.yml
+++ b/.github/workflows/webdriv_test.yml
@@ -21,6 +21,27 @@ jobs:
         python -m pip install --upgrade pip
         pip install flake8 pytest
         if [ -f selenium-tests/requirements_wd.txt ]; then pip install -r selenium-tests/requirements_wd.txt; fi
+
+    - name: install Nodejs
+      uses: actions/setup-node@v2
+      with:
+        node-version: '14'
+
+    - name: Install Selenium Side Runner
+      run: |
+        npm install -g selenium-side-runner
+
+    - name: Install Chrome
+      run: |
+        sudo apt install google-chrome-stable
+
+    - name: Install seleniumbase
+      run: pip install seleniumbase
+
+    - name: Install chromedriver
+      run: |
+        seleniumbase install chromedriver
+
     - name: Lint with flake8
       run: |
         # stop the build if there are Python syntax errors or undefined names
