--- a/.github/workflows/side-run-test.yml
+++ b/.github/workflows/side-run-test.yml
@@ -10,10 +10,8 @@ on:
 
 jobs:
 
-  tests:
-
+  registration:
     runs-on: ubuntu-latest
-
     steps:
       - uses: actions/checkout@v2
 
@@ -44,3 +42,74 @@ jobs:
       - name: Run Tests
         run: |
           selenium-side-runner seleniumide-tests/registration.side
+
+
+  login:
+    runs-on: ubuntu-latest
+    needs: registration
+    steps:
+      - uses: actions/checkout@v2
+
+      - name: Builds and Starts
+        run: |
+          docker-compose up -d
+
+      - name: install Nodejs
+        uses: actions/setup-node@v2
+        with:
+          node-version: '14'
+
+      - name: Install Selenium Side Runner
+        run: |
+          npm install -g selenium-side-runner
+
+      - name: Install Chrome
+        run: |
+          sudo apt install google-chrome-stable
+
+      - name: Install seleniumbase
+        run: pip install seleniumbase
+
+      - name: Install chromedriver
+        run: |
+          seleniumbase install chromedriver
+
+      - name: Run Tests
+        run: |
+          selenium-side-runner seleniumide-tests/login.side
+
+
+  post:
+    runs-on: ubuntu-latest
+    needs: login
+    steps:
+      - uses: actions/checkout@v2
+
+      - name: Builds and Starts
+        run: |
+          docker-compose up -d
+
+      - name: install Nodejs
+        uses: actions/setup-node@v2
+        with:
+          node-version: '14'
+
+      - name: Install Selenium Side Runner
+        run: |
+          npm install -g selenium-side-runner
+
+      - name: Install Chrome
+        run: |
+          sudo apt install google-chrome-stable
+
+      - name: Install seleniumbase
+        run: pip install seleniumbase
+
+      - name: Install chromedriver
+        run: |
+          seleniumbase install chromedriver
+
+      - name: Run Tests
+        run: |
+          selenium-side-runner seleniumide-tests/post.side
+
