--- a/.github/workflows/side-run-test.yml
+++ b/.github/workflows/side-run-test.yml
@@ -30,14 +30,15 @@ jobs:
 
       - name: Install Chrome
         run: |
-          sudo apt install google-chrome-stable
+          sudo apt-get install google-chrome-stable
 
       - name: Install seleniumbase
         run: pip install seleniumbase
 
       - name: Install chromedriver
         run: |
-          seleniumbase install chromedriver
+          sudo apt-get install chromium-chromedriver
+#          seleniumbase install chromedriver
 
       - name: Run Tests
         run: |
