--- a/.github/workflows/webdriv_test.yml
+++ b/.github/workflows/webdriv_test.yml
@@ -36,7 +36,7 @@ jobs:
 
     - name: Install chromedriver
       run: |
-        sudo apt-get install chromium-chromedriver
+        sudo apt-get -yqq install chromium-chromedriver
 #        seleniumbase install chromedriver
 
     - name: Lint with flake8
