--- a/.github/workflows/webdriv_test.yml
+++ b/.github/workflows/webdriv_test.yml
@@ -8,41 +8,45 @@ on:
 
 jobs:
   build:
+
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v2
-
     - name: Set up Python 3.9
       uses: actions/setup-python@v2
       with:
         python-version: 3.9
-
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
         pip install flake8 pytest
         if [ -f selenium-tests/requirements_wd.txt ]; then pip install -r selenium-tests/requirements_wd.txt; fi
 
-    - name: Install Chrome
+    - name: install Nodejs
+      uses: actions/setup-node@v2
+      with:
+        node-version: '14'
+
+   - name: Install Chrome
       run: |
         sudo apt install google-chrome-stable
 
-    - name: Prepare Selenium
-      # https://github.com/marketplace/actions/setup-chromedriver
-      uses: nanasess/setup-chromedriver@master
-    - name: Start XVFB
-      run: |
-        sudo Xvfb -ac :99 -screen 0 1280x1024x24 > /dev/null 2>&1 & # optional, disables headless mode
-    - name: Run tests
-      run: pipenv run python manage.py test functional_tests.tests.test_selenium.test_exams -v 2
-      env:
-        DISPLAY: 99
+    - name: Install seleniumbase
+      run: pip install seleniumbase
 
-   - name: Test with pytest
+    - name: Install chromedriver
+      run: |
+        sudo apt-get -yqq install chromium-chromedriver
+#        seleniumbase install chromedriver
+
+    - name: Lint with flake8
+      run: |
+        # stop the build if there are Python syntax errors or undefined names
+        flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics
+        # exit-zero treats all errors as warnings. The GitHub editor is 127 chars wide
+        flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
+    - name: Test with pytest
       run: |
         pytest selenium-tests/webdriv.py
-
-
-
 
 
