--- a/.github/workflows/wdriver.yml
+++ b/.github/workflows/wdriver.yml
@@ -10,12 +10,17 @@ jobs:
   build:
 
     runs-on: ubuntu-18.04
+    strategy:
+      matrix:
+        python-version: [3.7]
+
     steps:
     - uses: actions/checkout@v2
-    - name: Set up Python 3.7
+    - name: Set up python ${{ matrix.python-version }}
       uses: actions/setup-python@v1
       with:
-        python-version: 3.7
+        python-version: ${{ matrix.python-version }}
+
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
