--- a/.github/workflows/wdriver.yml
+++ b/.github/workflows/wdriver.yml
@@ -9,17 +9,13 @@ on:
 jobs:
   build:
 
-    runs-on: ubuntu-18.04
-    strategy:
-      matrix:
-        python-version: [3.7]
-
+    runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v2
-    - name: Set up python ${{ matrix.python-version }}
-      uses: actions/setup-python@v1
+    - name: Set up Python 3.9
+      uses: actions/setup-python@v2
       with:
-        python-version: ${{ matrix.python-version }}
+        python-version: 3.9
 
     - name: Install dependencies
       run: |
