--- a/.github/workflows/side-run-env-test.yml
+++ b/.github/workflows/side-run-env-test.yml
@@ -103,4 +103,4 @@ jobs:
 
       - name: Run Tests
         run: |
-          selenium-side-runner seleniumide-tests/post.side
+          selenium-side-runner -c "browserName=chrome goog:chromeOptions.args=[disable-infobars, headless]" seleniumide-tests/post.side
