--- a/.github/workflows/test_proj2.yml
+++ b/.github/workflows/test_proj2.yml
@@ -1,4 +1,4 @@
-name: Test_project
+name: Test_proj_proba
 
 on:
   push:
@@ -48,7 +48,7 @@ jobs:
 
     - name: Test with pytest
       run: |
-        pytest test_proj/test_tc_A001.py --alluredir=allure-results
+        pytest test_proj/test_tc_A001b.py --alluredir=allure-results
 
     - name: Get Allure history
       uses: actions/checkout@v2
