--- a/.github/workflows/test_proj.yml
+++ b/.github/workflows/test_proj.yml
@@ -24,14 +24,7 @@ jobs:
 
     - name: Install Chrome
       run: |
-        sudo apt install google-chrome-stable
-
-    - name: Install seleniumbase
-      run: pip install seleniumbase
-
-    - name: Install chromedriver
-      run: |
-        seleniumbase install chromedriver
+        sudo install google-chrome-stable
 
     - name: Install dependencies
       run: |
