--- a/.github/workflows/test_proj_ind0.yml
+++ b/.github/workflows/test_proj_ind0.yml
@@ -13,10 +13,10 @@ jobs:
     steps:
     - uses: actions/checkout@v2
 
-    - name: Set up Python 3.9.5
+    - name: Set up Python 3.9
       uses: actions/setup-python@v2
       with:
-        python-version: 3.9.5
+        python-version: 3.9
 
     - name: Install dependencies
       run: |
@@ -31,46 +31,11 @@ jobs:
       run: |
           docker-compose up -d
 
-    - name: Sleep for 45 seconds
-      run: sleep 45s
+    - name: Sleep for 55 seconds
+      run: sleep 55s
       shell: bash
 
     - name: Test with pytest
       run: |
-        pytest test_proj/test_index_0.py --alluredir=allure-results
-
-    - name: Get Allure history
-      uses: actions/checkout@v2
-      if: always()
-      continue-on-error: true
-      with:
-        ref: gh-pages
-        path: gh-pages
-
-    - name: Allure Report action from marketplace
-      uses: simple-elf/allure-report-action@master
-      if: always()
-      with:
-        allure_results: allure-results
-        allure_history: allure-history
-        keep_reports: 20
-
-    - name: Deploy report to Github Pages
-      if: always()
-      uses: peaceiris/actions-gh-pages@v2
-      env:
-        PERSONAL_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        PUBLISH_BRANCH: gh-pages
-        PUBLISH_DIR: allure-history
-
-    - name: Collect docker logs
-      uses: jwalton/gh-docker-logs@v1
-      with:
-        dest: './logs'
-
-    - name: Archive execution artifacts
-      uses: actions/upload-artifact@v2
-      with:
-        name: docker-logs
-        path: ./logs
+        pytest test_proj/test_index_0.py
 
