--- a/.github/workflows/test_proj_allure_rep.yml
+++ b/.github/workflows/test_proj_allure_rep.yml
@@ -1,4 +1,4 @@
-name: Pytest_conduit_3
+name: Pytest_conduit_allure
 
 on:
   push:
@@ -7,7 +7,7 @@ on:
     branches: [ master ]
 
 jobs:
-  index3:
+  full_test:
 
     runs-on: ubuntu-latest
     steps:
@@ -37,7 +37,31 @@ jobs:
 
     - name: Test with pytest
       run: |
-        pytest test_proj/test_index_3.py --alluredir=allure-results
+        pytest test_proj/test_index_local.py
+
+    - name: Get Allure history
+      uses: actions/checkout@v2
+      if: always()
+      continue-on-error: true
+      with:
+        ref: gh-pages
+        path: gh-pages
+
+    - name: Allure Report action from marketplace
+      uses: simple-elf/allure-report-action@master
+      if: always()
+      with:
+        allure_results: allure-results
+        allure_history: allure-history
+        keep_reports: 20
+
+    - name: Deploy report to Github Pages
+      if: always()
+      uses: peaceiris/actions-gh-pages@v2
+      env:
+        PERSONAL_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        PUBLISH_BRANCH: gh-pages
+        PUBLISH_DIR: allure-history
 
     - name: Collect docker logs
       uses: jwalton/gh-docker-logs@v1
@@ -49,4 +73,3 @@ jobs:
       with:
         name: docker-logs
         path: ./logs
-
