--- a/.github/workflows/test_proj_ind2.yml
+++ b/.github/workflows/test_proj_ind2.yml
@@ -37,7 +37,7 @@ jobs:
 
     - name: Test with pytest
       run: |
-        pytest test_proj/test_index_2.py --alluredir=allure-results
+        pytest test_proj/test_index_2.py
 
     - name: Collect docker logs
       uses: jwalton/gh-docker-logs@v1
